# harvest-invoice-calculator

./: .envrc  .envrc.local-template  .gitignore  .mergify.yml  LICENSE  README.md  bors.toml  default.nix  flake.nix  harvest-bills.py  harvest-exporter.nix  harvest-report.nix  pyproject.toml  quipu-invoicer.nix  renovate.json  setup.cfg  sevdesk-invoicer.nix  sevdesk.nix  shell.nix  transferwise-exporter.nix  wise-exporter.nix  working-days-calculator.py
harvest/: __init__.py
harvest_exporter/: __init__.py  cli.py  export.py  harvest.py  rest.py  transferwise.py
harvest_invoice_calculator/: __init__.py  transferwise.py
harvest_report/: __init__.py
harvest_submit_week/: __init__.py  default.nix
kimai/: __init__.py  api.py  data.py  jsonserializer.py
kimai_exporter/: __init__.py  cli.py  export.py
quipu/: pyproject.toml
quipu/quipu_api/: __init__.py  cli.py
quipu/quipu_invoicer/: __init__.py
quipu_invoicer/: __init__.py  api.py  cli.py
rest/: __init__.py
sevdesk/: setup.cfg
sevdesk-invoicer/: pyproject.toml  setup.cfg
sevdesk-invoicer/sevdesk_invoicer/: __init__.py
sevdesk-invoicer/sevdesk_tax_estimator/: __init__.py
sevdesk-invoicer/sevdesk_upload/: __init__.py
sevdesk-invoicer/sevdesk_wise_importer/: __init__.py
transferwise-exporter/: setup.cfg
transferwise-exporter/transferwise_exporter/: __init__.py
wise-exporter/: pyproject.toml  setup.cfg
wise-exporter/wise_exporter/: __init__.py
