[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quipu"
description = "Generate invoices in Quipu"
version = "0.1.0"
authors = [{ name = "Aldo Borrero", email = "aldo@aldoborrero.com" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
]
[project.urls]
Homepage = "https://github.com/numtide/numtide-invoice-generator"

[project.scripts]
quipu-invoicer = "quipu_invoicer:main"
quipu-cli = "quipu_api.cli:main"

[tool.setuptools.packages]
find = {}

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "quipu.*"
ignore_missing_imports = true
